// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Table/Table Defaults play-test 1`] = `
<div data-test-block="true">
  <div class=" ">
    <table class="_table_1kbf9_15  _table_standard_1kbf9_38 ">
      <caption class="_tableCaption_1kbf9_22 _hidden_1kbf9_45 _tableCaption_standard_1kbf9_28">
        tabellcaption
      </caption>
      <thead>
        <tr class>
          <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 "
              scope="col"
          >
            Category
          </th>
          <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 "
              scope="col"
          >
            Items
          </th>
          <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 "
              scope="col"
          >
            Expenditure
          </th>
        </tr>
      </thead>
      <tbody>
        <tr class>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20 _dataCell_rowspan_1ot0q_16 rowSpanRight"
              rowspan="2"
          >
            Edible
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            Donuts
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            3,000
          </td>
        </tr>
        <tr class>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            Cake
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            3,000
          </td>
        </tr>
        <tr class>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20 _dataCell_rowspan_1ot0q_16 rowSpanRight"
              rowspan="2"
          >
            Non-Edible
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            Stationery
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            18,000
          </td>
        </tr>
        <tr class>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            Batteries
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            9,000
          </td>
        </tr>
      </tbody>
      <tfoot>
        <tr class>
          <th class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  _sum_16rlo_1 "
              colspan="2"
              scope="row"
          >
            Sum
          </th>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  _sum_16rlo_1 ">
            32,000
          </td>
        </tr>
      </tfoot>
    </table>
  </div>
</div>
`;

exports[`Tester/Table/Table WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div class=" ">
    <table id="htmlId"
           class="_table_1kbf9_15  _table_standard_1kbf9_38 dummyClassname"
           lang="nb"
           data-testid="123ID"
    >
      <caption class="_tableCaption_1kbf9_22 _hidden_1kbf9_45 _tableCaption_standard_1kbf9_28">
        tabellcaption
      </caption>
      <thead>
        <tr class>
          <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 "
              scope="col"
          >
            Category
          </th>
          <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 "
              scope="col"
          >
            Items
          </th>
          <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 "
              scope="col"
          >
            Expenditure
          </th>
        </tr>
      </thead>
      <tbody>
        <tr class>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20 _dataCell_rowspan_1ot0q_16 rowSpanRight"
              rowspan="2"
          >
            Edible
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            Donuts
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            3,000
          </td>
        </tr>
        <tr class>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            Cake
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            3,000
          </td>
        </tr>
        <tr class>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20 _dataCell_rowspan_1ot0q_16 rowSpanRight"
              rowspan="2"
          >
            Non-Edible
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            Stationery
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            18,000
          </td>
        </tr>
        <tr class>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            Batteries
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            9,000
          </td>
        </tr>
      </tbody>
      <tfoot>
        <tr class>
          <th class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  _sum_16rlo_1 "
              colspan="2"
              scope="row"
          >
            Sum
          </th>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  _sum_16rlo_1 ">
            32,000
          </td>
        </tr>
      </tfoot>
    </table>
  </div>
</div>
`;

exports[`Tester/Table/Table WithDefaultRowInEditMode smoke-test 1`] = `
<div data-test-block="true">
  <div class=" ">
    <table class="_table_1kbf9_15  _table_standard_1kbf9_38 ">
      <caption class="_tableCaption_1kbf9_22 _hidden_1kbf9_45 _tableCaption_standard_1kbf9_28">
        Månedoversikt
      </caption>
      <thead>
        <tr class>
          <td class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 ">
          </td>
          <th class="_headerCell_1525d_1 _headerCell_noPadding_1525d_17  _headerCell_left_1525d_51 "
              scope="col"
          >
            <button class="_headerCellSortButton_1525d_20 _headerCell_standard_1525d_1"
                    type="button"
            >
              Dekningsgrad
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _headerCellSortButtonIcon_1525d_31"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rv:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rv:">
                  Sorterbar
                </title>
                <path d="m7 1.9 5.6 5.8-1.1 1.2-3.6-3.8v17H6.1v-17L2.6 8.9 1.4 7.6 7 1.9Zm10.9 0v17l3.5-3.8 1.2 1.3-5.6 5.7-5.6-5.8 1.1-1.2 3.6 3.8v-17h1.8Z">
                </path>
              </svg>
            </button>
          </th>
          <th class="_headerCell_1525d_1 _headerCell_noPadding_1525d_17  _headerCell_right_1525d_54 "
              data-testid="header-belop"
              scope="col"
          >
            <button class="_headerCellSortButton_1525d_20 _headerCell_standard_1525d_1"
                    type="button"
            >
              Beløp
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _headerCellSortButtonIcon_1525d_31"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r10:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r10:">
                  Sorterbar
                </title>
                <path d="m7 1.9 5.6 5.8-1.1 1.2-3.6-3.8v17H6.1v-17L2.6 8.9 1.4 7.6 7 1.9Zm10.9 0v17l3.5-3.8 1.2 1.3-5.6 5.7-5.6-5.8 1.1-1.2 3.6 3.8v-17h1.8Z">
                </path>
              </svg>
            </button>
          </th>
          <th class="_headerCell_1525d_1 _headerCell_noPadding_1525d_17  _headerCell_center_1525d_57 "
              scope="col"
          >
            <button class="_headerCellSortButton_1525d_20 _headerCell_standard_1525d_1"
                    type="button"
            >
              Måned
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _headerCellSortButtonIcon_1525d_31"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r11:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r11:">
                  Sorterbar
                </title>
                <path d="m7 1.9 5.6 5.8-1.1 1.2-3.6-3.8v17H6.1v-17L2.6 8.9 1.4 7.6 7 1.9Zm10.9 0v17l3.5-3.8 1.2 1.3-5.6 5.7-5.6-5.8 1.1-1.2 3.6 3.8v-17h1.8Z">
                </path>
              </svg>
            </button>
          </th>
          <th class="_headerCell_1525d_1 _headerCell_noPadding_1525d_17  _headerCell_right_1525d_54 "
              data-testid="header-avkastning"
              scope="col"
          >
            <button class="_headerCellSortButton_1525d_20 _headerCell_standard_1525d_1"
                    type="button"
            >
              Avkastning
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _headerCellSortButtonIcon_1525d_31"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r12:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r12:">
                  Sorterbar
                </title>
                <path d="m7 1.9 5.6 5.8-1.1 1.2-3.6-3.8v17H6.1v-17L2.6 8.9 1.4 7.6 7 1.9Zm10.9 0v17l3.5-3.8 1.2 1.3-5.6 5.7-5.6-5.8 1.1-1.2 3.6 3.8v-17h1.8Z">
                </path>
              </svg>
            </button>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr id="s5f0e"
            class=" "
            data-testid="row-0"
        >
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  _buttonCell_1lgas_1  ">
            <button class="_button_g87u5_1 _button_medium_g87u5_45  "
                    disabled
                    type="button"
                    aria-describedby="s5f0e"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r14:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r14:">
                  Rediger rad
                </title>
                <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="s5f0e"
              class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  "
          >
            100 %
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            5426
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_center_1ot0q_26  ">
            Januar
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            1000
          </td>
        </tr>
        <tr id="3vesy"
            class="_editableRow_expanded_1xi8g_5 "
            data-testid="row-1"
        >
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  _buttonCell_1lgas_1  _buttonCell_expanded_1lgas_10">
            <button class="_button_g87u5_1 _button_medium_g87u5_45  _hideIcon_1lgas_34"
                    disabled
                    type="button"
                    aria-describedby="3vesy"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r16:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r16:">
                  Rediger rad
                </title>
                <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
                </path>
              </svg>
            </button>
            <div class="_expandableContent_1lgas_18 _expandableContent_1xi8g_47"
                 style="width: 515px;"
            >
              <div class="_editableRowTriangle_1xi8g_21">
              </div>
              <span class="_srOnly_1xi8g_54"
                    tabindex="-1"
              >
                Rediger data
              </span>
              <div class="emptyExpandedTableRow">
              </div>
            </div>
          </td>
          <td id="3vesy"
              class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  "
          >
            50 %
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            5432
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_center_1ot0q_26  ">
            Februar
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            500
          </td>
        </tr>
        <tr id="16prz"
            class=" "
            data-testid="row-2"
        >
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  _buttonCell_1lgas_1  ">
            <button class="_button_g87u5_1 _button_medium_g87u5_45  "
                    disabled
                    type="button"
                    aria-describedby="16prz"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r18:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r18:">
                  Rediger rad
                </title>
                <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="16prz"
              class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  "
          >
            20 %
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            4899
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_center_1ot0q_26  ">
            Mars
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            2000
          </td>
        </tr>
        <tr class
            data-testid="row-expand-3"
        >
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  _buttonCell_1lgas_1  ">
            <button class="_button_g87u5_1 _button_medium_g87u5_45  "
                    type="button"
                    aria-describedby="3xpjb"
                    aria-expanded="false"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r19:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r19:">
                  Mer informasjon
                </title>
                <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="3xpjb"
              class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  "
          >
            30 %
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            2344
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_center_1ot0q_26  ">
            April
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            1055
          </td>
        </tr>
      </tbody>
      <tfoot>
        <tr class>
          <th class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  _sum_16rlo_1 _sum_topSeparator_16rlo_5"
              colspan="4"
              scope="row"
          >
            Sum
          </th>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  _sum_16rlo_1 _sum_topSeparator_16rlo_5">
            4555
          </td>
        </tr>
      </tfoot>
    </table>
    <div class="_hidden_1kbf9_45"
         aria-live="polite"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Table/Table WithExpandEditSort smoke-test 1`] = `
<div data-test-block="true">
  <div class=" ">
    <table class="_table_1kbf9_15  _table_standard_1kbf9_38 ">
      <caption class="_tableCaption_1kbf9_22 _hidden_1kbf9_45 _tableCaption_standard_1kbf9_28">
        Månedoversikt
      </caption>
      <thead>
        <tr class>
          <td class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 ">
          </td>
          <th class="_headerCell_1525d_1 _headerCell_noPadding_1525d_17  _headerCell_left_1525d_51 "
              scope="col"
          >
            <button class="_headerCellSortButton_1525d_20 _headerCell_standard_1525d_1"
                    type="button"
            >
              Dekningsgrad
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _headerCellSortButtonIcon_1525d_31"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rb:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rb:">
                  Sorterbar
                </title>
                <path d="m7 1.9 5.6 5.8-1.1 1.2-3.6-3.8v17H6.1v-17L2.6 8.9 1.4 7.6 7 1.9Zm10.9 0v17l3.5-3.8 1.2 1.3-5.6 5.7-5.6-5.8 1.1-1.2 3.6 3.8v-17h1.8Z">
                </path>
              </svg>
            </button>
          </th>
          <th class="_headerCell_1525d_1 _headerCell_noPadding_1525d_17  _headerCell_right_1525d_54 "
              data-testid="header-belop"
              scope="col"
          >
            <button class="_headerCellSortButton_1525d_20 _headerCell_standard_1525d_1"
                    type="button"
            >
              Beløp
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _headerCellSortButtonIcon_1525d_31"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rc:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rc:">
                  Sorterbar
                </title>
                <path d="m7 1.9 5.6 5.8-1.1 1.2-3.6-3.8v17H6.1v-17L2.6 8.9 1.4 7.6 7 1.9Zm10.9 0v17l3.5-3.8 1.2 1.3-5.6 5.7-5.6-5.8 1.1-1.2 3.6 3.8v-17h1.8Z">
                </path>
              </svg>
            </button>
          </th>
          <th class="_headerCell_1525d_1 _headerCell_noPadding_1525d_17  _headerCell_center_1525d_57 "
              scope="col"
          >
            <button class="_headerCellSortButton_1525d_20 _headerCell_standard_1525d_1"
                    type="button"
            >
              Måned
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _headerCellSortButtonIcon_1525d_31"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rd:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rd:">
                  Sorterbar
                </title>
                <path d="m7 1.9 5.6 5.8-1.1 1.2-3.6-3.8v17H6.1v-17L2.6 8.9 1.4 7.6 7 1.9Zm10.9 0v17l3.5-3.8 1.2 1.3-5.6 5.7-5.6-5.8 1.1-1.2 3.6 3.8v-17h1.8Z">
                </path>
              </svg>
            </button>
          </th>
          <th class="_headerCell_1525d_1 _headerCell_noPadding_1525d_17  _headerCell_right_1525d_54 "
              data-testid="header-avkastning"
              scope="col"
          >
            <button class="_headerCellSortButton_1525d_20 _headerCell_standard_1525d_1"
                    type="button"
            >
              Avkastning
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _headerCellSortButtonIcon_1525d_31"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:re:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:re:">
                  Sorterbar
                </title>
                <path d="m7 1.9 5.6 5.8-1.1 1.2-3.6-3.8v17H6.1v-17L2.6 8.9 1.4 7.6 7 1.9Zm10.9 0v17l3.5-3.8 1.2 1.3-5.6 5.7-5.6-5.8 1.1-1.2 3.6 3.8v-17h1.8Z">
                </path>
              </svg>
            </button>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr id="s5f0e"
            class=" "
            data-testid="row-0"
        >
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  _buttonCell_1lgas_1  ">
            <button class="_button_g87u5_1 _button_medium_g87u5_45  "
                    type="button"
                    aria-describedby="s5f0e"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rg:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rg:">
                  Rediger rad
                </title>
                <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="s5f0e"
              class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  "
          >
            100 %
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            5426
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_center_1ot0q_26  ">
            Januar
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            1000
          </td>
        </tr>
        <tr id="3vesy"
            class=" "
            data-testid="row-1"
        >
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  _buttonCell_1lgas_1  ">
            <button class="_button_g87u5_1 _button_medium_g87u5_45  "
                    type="button"
                    aria-describedby="3vesy"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:ri:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:ri:">
                  Rediger rad
                </title>
                <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="3vesy"
              class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  "
          >
            50 %
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            5432
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_center_1ot0q_26  ">
            Februar
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            500
          </td>
        </tr>
        <tr id="16prz"
            class=" "
            data-testid="row-2"
        >
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  _buttonCell_1lgas_1  ">
            <button class="_button_g87u5_1 _button_medium_g87u5_45  "
                    type="button"
                    aria-describedby="16prz"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rk:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rk:">
                  Rediger rad
                </title>
                <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="16prz"
              class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  "
          >
            20 %
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            4899
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_center_1ot0q_26  ">
            Mars
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            2000
          </td>
        </tr>
        <tr class
            data-testid="row-expand-3"
        >
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  _buttonCell_1lgas_1  ">
            <button class="_button_g87u5_1 _button_medium_g87u5_45  "
                    type="button"
                    aria-describedby="3xpjb"
                    aria-expanded="false"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rl:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rl:">
                  Mer informasjon
                </title>
                <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="3xpjb"
              class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  "
          >
            30 %
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            2344
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_center_1ot0q_26  ">
            April
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            1055
          </td>
        </tr>
      </tbody>
      <tfoot>
        <tr class>
          <th class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  _sum_16rlo_1 _sum_topSeparator_16rlo_5"
              colspan="4"
              scope="row"
          >
            Sum
          </th>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  _sum_16rlo_1 _sum_topSeparator_16rlo_5">
            4555
          </td>
        </tr>
      </tfoot>
    </table>
    <div class="_hidden_1kbf9_45"
         aria-live="polite"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Table/Table WithFullWidthAndTextAlignment smoke-test 1`] = `
<div data-test-block="true">
  <div class=" ">
    <table class="_table_1kbf9_15 _table_fullWidth_1kbf9_35 _table_standard_1kbf9_38 ">
      <caption class="_tableCaption_1kbf9_22 _hidden_1kbf9_45 _tableCaption_standard_1kbf9_28">
        tabellcaption
      </caption>
      <thead>
        <tr class>
          <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 "
              scope="col"
          >
            left
          </th>
          <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_center_1525d_57 "
              scope="col"
          >
            center
          </th>
          <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_right_1525d_54 "
              scope="col"
          >
            right
          </th>
          <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 "
              scope="col"
          >
            default
          </th>
          <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_right_1525d_54 "
              scope="col"
          >
            right
          </th>
        </tr>
      </thead>
      <tbody>
        <tr class>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            left
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_center_1ot0q_26  ">
            center
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            right
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            default
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            left
          </td>
        </tr>
        <tr class>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            left
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_center_1ot0q_26  ">
            center
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            right
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            default
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            right
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Tester/Table/Table WithFullWidthExpandableEdit smoke-test 1`] = `
<div data-test-block="true">
  <div class=" ">
    <table class="_table_1kbf9_15 _table_fullWidth_1kbf9_35 _table_standard_1kbf9_38 ">
      <caption class="_tableCaption_1kbf9_22 _hidden_1kbf9_45 _tableCaption_standard_1kbf9_28">
        Månedoversikt
      </caption>
      <thead>
        <tr class>
          <td class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 ">
          </td>
          <th class="_headerCell_1525d_1 _headerCell_noPadding_1525d_17  _headerCell_left_1525d_51 "
              scope="col"
          >
            <button class="_headerCellSortButton_1525d_20 _headerCell_standard_1525d_1"
                    type="button"
            >
              Dekningsgrad
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _headerCellSortButtonIcon_1525d_31"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1l:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1l:">
                  Sorterbar
                </title>
                <path d="m7 1.9 5.6 5.8-1.1 1.2-3.6-3.8v17H6.1v-17L2.6 8.9 1.4 7.6 7 1.9Zm10.9 0v17l3.5-3.8 1.2 1.3-5.6 5.7-5.6-5.8 1.1-1.2 3.6 3.8v-17h1.8Z">
                </path>
              </svg>
            </button>
          </th>
          <th class="_headerCell_1525d_1 _headerCell_noPadding_1525d_17  _headerCell_right_1525d_54 "
              data-testid="header-belop"
              scope="col"
          >
            <button class="_headerCellSortButton_1525d_20 _headerCell_standard_1525d_1"
                    type="button"
            >
              Beløp
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _headerCellSortButtonIcon_1525d_31"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1m:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1m:">
                  Sorterbar
                </title>
                <path d="m7 1.9 5.6 5.8-1.1 1.2-3.6-3.8v17H6.1v-17L2.6 8.9 1.4 7.6 7 1.9Zm10.9 0v17l3.5-3.8 1.2 1.3-5.6 5.7-5.6-5.8 1.1-1.2 3.6 3.8v-17h1.8Z">
                </path>
              </svg>
            </button>
          </th>
          <th class="_headerCell_1525d_1 _headerCell_noPadding_1525d_17  _headerCell_center_1525d_57 "
              scope="col"
          >
            <button class="_headerCellSortButton_1525d_20 _headerCell_standard_1525d_1"
                    type="button"
            >
              Måned
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _headerCellSortButtonIcon_1525d_31"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1n:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1n:">
                  Sorterbar
                </title>
                <path d="m7 1.9 5.6 5.8-1.1 1.2-3.6-3.8v17H6.1v-17L2.6 8.9 1.4 7.6 7 1.9Zm10.9 0v17l3.5-3.8 1.2 1.3-5.6 5.7-5.6-5.8 1.1-1.2 3.6 3.8v-17h1.8Z">
                </path>
              </svg>
            </button>
          </th>
          <th class="_headerCell_1525d_1 _headerCell_noPadding_1525d_17  _headerCell_right_1525d_54 "
              data-testid="header-avkastning"
              scope="col"
          >
            <button class="_headerCellSortButton_1525d_20 _headerCell_standard_1525d_1"
                    type="button"
            >
              Avkastning
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _headerCellSortButtonIcon_1525d_31"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1o:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1o:">
                  Sorterbar
                </title>
                <path d="m7 1.9 5.6 5.8-1.1 1.2-3.6-3.8v17H6.1v-17L2.6 8.9 1.4 7.6 7 1.9Zm10.9 0v17l3.5-3.8 1.2 1.3-5.6 5.7-5.6-5.8 1.1-1.2 3.6 3.8v-17h1.8Z">
                </path>
              </svg>
            </button>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr id="s5f0e"
            class=" "
            data-testid="row-0"
        >
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  _buttonCell_1lgas_1  ">
            <button class="_button_g87u5_1 _button_medium_g87u5_45  "
                    type="button"
                    aria-describedby="s5f0e"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1q:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1q:">
                  Rediger rad
                </title>
                <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="s5f0e"
              class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  "
          >
            100 %
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            5426
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_center_1ot0q_26  ">
            Januar
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            1000
          </td>
        </tr>
        <tr id="3vesy"
            class=" "
            data-testid="row-1"
        >
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  _buttonCell_1lgas_1  ">
            <button class="_button_g87u5_1 _button_medium_g87u5_45  "
                    type="button"
                    aria-describedby="3vesy"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1s:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1s:">
                  Rediger rad
                </title>
                <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="3vesy"
              class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  "
          >
            50 %
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            5432
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_center_1ot0q_26  ">
            Februar
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            500
          </td>
        </tr>
        <tr id="16prz"
            class=" "
            data-testid="row-2"
        >
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  _buttonCell_1lgas_1  ">
            <button class="_button_g87u5_1 _button_medium_g87u5_45  "
                    type="button"
                    aria-describedby="16prz"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1u:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1u:">
                  Rediger rad
                </title>
                <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="16prz"
              class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  "
          >
            20 %
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            4899
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_center_1ot0q_26  ">
            Mars
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            2000
          </td>
        </tr>
        <tr class
            data-testid="row-expand-3"
        >
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  _buttonCell_1lgas_1  ">
            <button class="_button_g87u5_1 _button_medium_g87u5_45  "
                    type="button"
                    aria-describedby="3xpjb"
                    aria-expanded="false"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1v:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1v:">
                  Mer informasjon
                </title>
                <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="3xpjb"
              class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  "
          >
            30 %
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            2344
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_center_1ot0q_26  ">
            April
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            1055
          </td>
        </tr>
      </tbody>
      <tfoot>
        <tr class>
          <th class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  _sum_16rlo_1 _sum_topSeparator_16rlo_5"
              colspan="4"
              scope="row"
          >
            Sum
          </th>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  _sum_16rlo_1 _sum_topSeparator_16rlo_5">
            4555
          </td>
        </tr>
      </tfoot>
    </table>
    <div class="_hidden_1kbf9_45"
         aria-live="polite"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Table/Table WithRef play-test 1`] = `
<div data-test-block="true">
  <div class=" ">
    <table class="_table_1kbf9_15  _table_standard_1kbf9_38 "
           id="dummyIdForwardedFromRef"
    >
      <caption class="_tableCaption_1kbf9_22 _hidden_1kbf9_45 _tableCaption_standard_1kbf9_28">
        tabellcaption
      </caption>
      <thead>
        <tr class>
          <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 "
              scope="col"
          >
            Category
          </th>
          <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 "
              scope="col"
          >
            Items
          </th>
          <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 "
              scope="col"
          >
            Expenditure
          </th>
        </tr>
      </thead>
      <tbody>
        <tr class>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20 _dataCell_rowspan_1ot0q_16 rowSpanRight"
              rowspan="2"
          >
            Edible
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            Donuts
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            3,000
          </td>
        </tr>
        <tr class>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            Cake
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            3,000
          </td>
        </tr>
        <tr class>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20 _dataCell_rowspan_1ot0q_16 rowSpanRight"
              rowspan="2"
          >
            Non-Edible
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            Stationery
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            18,000
          </td>
        </tr>
        <tr class>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            Batteries
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            9,000
          </td>
        </tr>
      </tbody>
      <tfoot>
        <tr class>
          <th class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  _sum_16rlo_1 "
              colspan="2"
              scope="row"
          >
            Sum
          </th>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  _sum_16rlo_1 ">
            32,000
          </td>
        </tr>
      </tfoot>
    </table>
  </div>
</div>
`;

exports[`Tester/Table/Table WithScrollbar smoke-test 1`] = `
<div data-test-block="true">
  <p>
    Table med Scrollbar
  </p>
  <div class="scrollTableWrapper">
    <div class="_wrapper_1kbf9_5 ">
      <table class="_table_1kbf9_15  _table_standard_1kbf9_38 ">
        <caption class="_tableCaption_1kbf9_22 _hidden_1kbf9_45 _tableCaption_standard_1kbf9_28">
          tabellcaption
        </caption>
        <thead>
          <tr class>
            <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 "
                scope="col"
            >
              Forename
            </th>
            <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 "
                scope="col"
            >
              Surname
            </th>
            <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 "
                scope="col"
            >
              email
            </th>
          </tr>
        </thead>
        <tbody>
          <tr class>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              Otto
            </td>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              Octavius
            </td>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              doc.ock@example.org
            </td>
          </tr>
          <tr class>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              Norman
            </td>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              Osbourne
            </td>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              norman.osbourne@example.org
            </td>
          </tr>
          <tr class>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              Curt
            </td>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              Connors
            </td>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              curt.connors@example.org
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div class="scrollTableWrapperSuccess">
    <div class="_wrapper_1kbf9_5 ">
      <table class="_table_1kbf9_15  _table_standard_1kbf9_38 ">
        <caption class="_tableCaption_1kbf9_22 _hidden_1kbf9_45 _tableCaption_standard_1kbf9_28">
          tabellcaption
        </caption>
        <thead>
          <tr class>
            <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 "
                scope="col"
            >
              Forename
            </th>
            <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 "
                scope="col"
            >
              Surname
            </th>
            <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 "
                scope="col"
            >
              email
            </th>
          </tr>
        </thead>
        <tbody>
          <tr class>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              Otto
            </td>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              Octavius
            </td>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              doc.ock@example.org
            </td>
          </tr>
          <tr class>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              Norman
            </td>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              Osbourne
            </td>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              norman.osbourne@example.org
            </td>
          </tr>
          <tr class>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              Curt
            </td>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              Connors
            </td>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              curt.connors@example.org
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div class="scrollTableWrapperWarning">
    <div class="_wrapper_1kbf9_5 ">
      <table class="_table_1kbf9_15  _table_standard_1kbf9_38 ">
        <caption class="_tableCaption_1kbf9_22 _hidden_1kbf9_45 _tableCaption_standard_1kbf9_28">
          tabellcaption
        </caption>
        <thead>
          <tr class>
            <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 "
                scope="col"
            >
              Forename
            </th>
            <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 "
                scope="col"
            >
              Surname
            </th>
            <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 "
                scope="col"
            >
              email
            </th>
          </tr>
        </thead>
        <tbody>
          <tr class>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              Otto
            </td>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              Octavius
            </td>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              doc.ock@example.org
            </td>
          </tr>
          <tr class>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              Norman
            </td>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              Osbourne
            </td>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              norman.osbourne@example.org
            </td>
          </tr>
          <tr class>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              Curt
            </td>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              Connors
            </td>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              curt.connors@example.org
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Tester/Table/Table WithVariantCompact smoke-test 1`] = `
<div data-test-block="true">
  <div class=" ">
    <table class="_table_1kbf9_15  _table_compact_1kbf9_41 ">
      <caption class="_tableCaption_1kbf9_22 _hidden_1kbf9_45 _tableCaption_compact_1kbf9_31">
        Månedoversikt
      </caption>
      <thead>
        <tr class>
          <td class="_headerCell_1525d_1 _headerCell_compact_1525d_63  _headerCell_left_1525d_51 ">
          </td>
          <th class="_headerCell_1525d_1 _headerCell_noPadding_1525d_17  _headerCell_left_1525d_51 "
              scope="col"
          >
            <button class="_headerCellSortButton_1525d_20 _headerCell_compact_1525d_63"
                    type="button"
            >
              Dekningsgrad
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _headerCellSortButtonIcon_1525d_31"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r0:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r0:">
                  Sorterbar
                </title>
                <path d="m7 1.9 5.6 5.8-1.1 1.2-3.6-3.8v17H6.1v-17L2.6 8.9 1.4 7.6 7 1.9Zm10.9 0v17l3.5-3.8 1.2 1.3-5.6 5.7-5.6-5.8 1.1-1.2 3.6 3.8v-17h1.8Z">
                </path>
              </svg>
            </button>
          </th>
          <th class="_headerCell_1525d_1 _headerCell_noPadding_1525d_17  _headerCell_right_1525d_54 "
              data-testid="header-belop"
              scope="col"
          >
            <button class="_headerCellSortButton_1525d_20 _headerCell_compact_1525d_63"
                    type="button"
            >
              Beløp
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _headerCellSortButtonIcon_1525d_31"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1:">
                  Sorterbar
                </title>
                <path d="m7 1.9 5.6 5.8-1.1 1.2-3.6-3.8v17H6.1v-17L2.6 8.9 1.4 7.6 7 1.9Zm10.9 0v17l3.5-3.8 1.2 1.3-5.6 5.7-5.6-5.8 1.1-1.2 3.6 3.8v-17h1.8Z">
                </path>
              </svg>
            </button>
          </th>
          <th class="_headerCell_1525d_1 _headerCell_noPadding_1525d_17  _headerCell_center_1525d_57 "
              scope="col"
          >
            <button class="_headerCellSortButton_1525d_20 _headerCell_compact_1525d_63"
                    type="button"
            >
              Måned
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _headerCellSortButtonIcon_1525d_31"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r2:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r2:">
                  Sorterbar
                </title>
                <path d="m7 1.9 5.6 5.8-1.1 1.2-3.6-3.8v17H6.1v-17L2.6 8.9 1.4 7.6 7 1.9Zm10.9 0v17l3.5-3.8 1.2 1.3-5.6 5.7-5.6-5.8 1.1-1.2 3.6 3.8v-17h1.8Z">
                </path>
              </svg>
            </button>
          </th>
          <th class="_headerCell_1525d_1 _headerCell_noPadding_1525d_17  _headerCell_right_1525d_54 "
              data-testid="header-avkastning"
              scope="col"
          >
            <button class="_headerCellSortButton_1525d_20 _headerCell_compact_1525d_63"
                    type="button"
            >
              Avkastning
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _headerCellSortButtonIcon_1525d_31"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r3:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r3:">
                  Sorterbar
                </title>
                <path d="m7 1.9 5.6 5.8-1.1 1.2-3.6-3.8v17H6.1v-17L2.6 8.9 1.4 7.6 7 1.9Zm10.9 0v17l3.5-3.8 1.2 1.3-5.6 5.7-5.6-5.8 1.1-1.2 3.6 3.8v-17h1.8Z">
                </path>
              </svg>
            </button>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr id="s5f0e"
            class=" "
            data-testid="row-0"
        >
          <td class="_dataCell_1ot0q_1 _dataCell_compact_1ot0q_29 _dataCell_left_1ot0q_20  _buttonCell_1lgas_1 _buttonCell_compact_1lgas_13 ">
            <button class="_button_g87u5_1 _button_extraSmall_g87u5_29  "
                    type="button"
                    aria-describedby="s5f0e"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r5:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r5:">
                  Rediger rad
                </title>
                <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="s5f0e"
              class="_dataCell_1ot0q_1 _dataCell_compact_1ot0q_29 _dataCell_left_1ot0q_20  "
          >
            100 %
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_compact_1ot0q_29 _dataCell_right_1ot0q_23  ">
            5426
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_compact_1ot0q_29 _dataCell_center_1ot0q_26  ">
            Januar
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_compact_1ot0q_29 _dataCell_right_1ot0q_23  ">
            1000
          </td>
        </tr>
        <tr id="3vesy"
            class=" "
            data-testid="row-1"
        >
          <td class="_dataCell_1ot0q_1 _dataCell_compact_1ot0q_29 _dataCell_left_1ot0q_20  _buttonCell_1lgas_1 _buttonCell_compact_1lgas_13 ">
            <button class="_button_g87u5_1 _button_extraSmall_g87u5_29  "
                    type="button"
                    aria-describedby="3vesy"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r7:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r7:">
                  Rediger rad
                </title>
                <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="3vesy"
              class="_dataCell_1ot0q_1 _dataCell_compact_1ot0q_29 _dataCell_left_1ot0q_20  "
          >
            50 %
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_compact_1ot0q_29 _dataCell_right_1ot0q_23  ">
            5432
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_compact_1ot0q_29 _dataCell_center_1ot0q_26  ">
            Februar
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_compact_1ot0q_29 _dataCell_right_1ot0q_23  ">
            500
          </td>
        </tr>
        <tr id="16prz"
            class=" "
            data-testid="row-2"
        >
          <td class="_dataCell_1ot0q_1 _dataCell_compact_1ot0q_29 _dataCell_left_1ot0q_20  _buttonCell_1lgas_1 _buttonCell_compact_1lgas_13 ">
            <button class="_button_g87u5_1 _button_extraSmall_g87u5_29  "
                    type="button"
                    aria-describedby="16prz"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r9:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r9:">
                  Rediger rad
                </title>
                <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="16prz"
              class="_dataCell_1ot0q_1 _dataCell_compact_1ot0q_29 _dataCell_left_1ot0q_20  "
          >
            20 %
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_compact_1ot0q_29 _dataCell_right_1ot0q_23  ">
            4899
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_compact_1ot0q_29 _dataCell_center_1ot0q_26  ">
            Mars
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_compact_1ot0q_29 _dataCell_right_1ot0q_23  ">
            2000
          </td>
        </tr>
        <tr class
            data-testid="row-expand-3"
        >
          <td class="_dataCell_1ot0q_1 _dataCell_compact_1ot0q_29 _dataCell_left_1ot0q_20  _buttonCell_1lgas_1 _buttonCell_compact_1lgas_13 ">
            <button class="_button_g87u5_1 _button_extraSmall_g87u5_29  "
                    type="button"
                    aria-describedby="3xpjb"
                    aria-expanded="false"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:ra:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:ra:">
                  Mer informasjon
                </title>
                <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="3xpjb"
              class="_dataCell_1ot0q_1 _dataCell_compact_1ot0q_29 _dataCell_left_1ot0q_20  "
          >
            30 %
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_compact_1ot0q_29 _dataCell_right_1ot0q_23  ">
            2344
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_compact_1ot0q_29 _dataCell_center_1ot0q_26  ">
            April
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_compact_1ot0q_29 _dataCell_right_1ot0q_23  ">
            1055
          </td>
        </tr>
      </tbody>
      <tfoot>
        <tr class>
          <th class="_dataCell_1ot0q_1 _dataCell_compact_1ot0q_29 _dataCell_right_1ot0q_23  _sum_16rlo_1 _sum_topSeparator_16rlo_5"
              colspan="4"
              scope="row"
          >
            Sum
          </th>
          <td class="_dataCell_1ot0q_1 _dataCell_compact_1ot0q_29 _dataCell_right_1ot0q_23  _sum_16rlo_1 _sum_topSeparator_16rlo_5">
            4555
          </td>
        </tr>
      </tfoot>
    </table>
    <div class="_hidden_1kbf9_45"
         aria-live="polite"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Table/Table WithWideScreen smoke-test 1`] = `
<div data-test-block="true">
  <div class=" ">
    <table class="_table_1kbf9_15  _table_standard_1kbf9_38 ">
      <caption class="_tableCaption_1kbf9_22 _hidden_1kbf9_45 _tableCaption_standard_1kbf9_28">
        Månedoversikt
      </caption>
      <thead>
        <tr class>
          <td class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 ">
          </td>
          <th class="_headerCell_1525d_1 _headerCell_noPadding_1525d_17  _headerCell_left_1525d_51 "
              scope="col"
          >
            <button class="_headerCellSortButton_1525d_20 _headerCell_standard_1525d_1"
                    type="button"
            >
              Dekningsgrad
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _headerCellSortButtonIcon_1525d_31"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1a:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1a:">
                  Sorterbar
                </title>
                <path d="m7 1.9 5.6 5.8-1.1 1.2-3.6-3.8v17H6.1v-17L2.6 8.9 1.4 7.6 7 1.9Zm10.9 0v17l3.5-3.8 1.2 1.3-5.6 5.7-5.6-5.8 1.1-1.2 3.6 3.8v-17h1.8Z">
                </path>
              </svg>
            </button>
          </th>
          <th class="_headerCell_1525d_1 _headerCell_noPadding_1525d_17  _headerCell_right_1525d_54 "
              data-testid="header-belop"
              scope="col"
          >
            <button class="_headerCellSortButton_1525d_20 _headerCell_standard_1525d_1"
                    type="button"
            >
              Beløp
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _headerCellSortButtonIcon_1525d_31"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1b:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1b:">
                  Sorterbar
                </title>
                <path d="m7 1.9 5.6 5.8-1.1 1.2-3.6-3.8v17H6.1v-17L2.6 8.9 1.4 7.6 7 1.9Zm10.9 0v17l3.5-3.8 1.2 1.3-5.6 5.7-5.6-5.8 1.1-1.2 3.6 3.8v-17h1.8Z">
                </path>
              </svg>
            </button>
          </th>
          <th class="_headerCell_1525d_1 _headerCell_noPadding_1525d_17  _headerCell_center_1525d_57 "
              scope="col"
          >
            <button class="_headerCellSortButton_1525d_20 _headerCell_standard_1525d_1"
                    type="button"
            >
              Måned
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _headerCellSortButtonIcon_1525d_31"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1c:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1c:">
                  Sorterbar
                </title>
                <path d="m7 1.9 5.6 5.8-1.1 1.2-3.6-3.8v17H6.1v-17L2.6 8.9 1.4 7.6 7 1.9Zm10.9 0v17l3.5-3.8 1.2 1.3-5.6 5.7-5.6-5.8 1.1-1.2 3.6 3.8v-17h1.8Z">
                </path>
              </svg>
            </button>
          </th>
          <th class="_headerCell_1525d_1 _headerCell_noPadding_1525d_17  _headerCell_right_1525d_54 "
              data-testid="header-avkastning"
              scope="col"
          >
            <button class="_headerCellSortButton_1525d_20 _headerCell_standard_1525d_1"
                    type="button"
            >
              Avkastning
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _headerCellSortButtonIcon_1525d_31"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1d:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1d:">
                  Sorterbar
                </title>
                <path d="m7 1.9 5.6 5.8-1.1 1.2-3.6-3.8v17H6.1v-17L2.6 8.9 1.4 7.6 7 1.9Zm10.9 0v17l3.5-3.8 1.2 1.3-5.6 5.7-5.6-5.8 1.1-1.2 3.6 3.8v-17h1.8Z">
                </path>
              </svg>
            </button>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr id="s5f0e"
            class=" "
            data-testid="row-0"
        >
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  _buttonCell_1lgas_1  ">
            <button class="_button_g87u5_1 _button_large_g87u5_52  "
                    type="button"
                    aria-describedby="s5f0e"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1f:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1f:">
                  Rediger rad
                </title>
                <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="s5f0e"
              class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  "
          >
            100 %
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            5426
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_center_1ot0q_26  ">
            Januar
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            1000
          </td>
        </tr>
        <tr id="3vesy"
            class=" "
            data-testid="row-1"
        >
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  _buttonCell_1lgas_1  ">
            <button class="_button_g87u5_1 _button_large_g87u5_52  "
                    type="button"
                    aria-describedby="3vesy"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1h:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1h:">
                  Rediger rad
                </title>
                <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="3vesy"
              class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  "
          >
            50 %
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            5432
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_center_1ot0q_26  ">
            Februar
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            500
          </td>
        </tr>
        <tr id="16prz"
            class=" "
            data-testid="row-2"
        >
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  _buttonCell_1lgas_1  ">
            <button class="_button_g87u5_1 _button_large_g87u5_52  "
                    type="button"
                    aria-describedby="16prz"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1j:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1j:">
                  Rediger rad
                </title>
                <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="16prz"
              class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  "
          >
            20 %
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            4899
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_center_1ot0q_26  ">
            Mars
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            2000
          </td>
        </tr>
        <tr class
            data-testid="row-expand-3"
        >
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  _buttonCell_1lgas_1  ">
            <button class="_button_g87u5_1 _button_large_g87u5_52  "
                    type="button"
                    aria-describedby="3xpjb"
                    aria-expanded="false"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1k:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1k:">
                  Mer informasjon
                </title>
                <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="3xpjb"
              class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  "
          >
            30 %
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            2344
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_center_1ot0q_26  ">
            April
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            1055
          </td>
        </tr>
      </tbody>
      <tfoot>
        <tr class>
          <th class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  _sum_16rlo_1 _sum_topSeparator_16rlo_5"
              colspan="4"
              scope="row"
          >
            Sum
          </th>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  _sum_16rlo_1 _sum_topSeparator_16rlo_5">
            4555
          </td>
        </tr>
      </tfoot>
    </table>
    <div class="_hidden_1kbf9_45"
         aria-live="polite"
    >
    </div>
  </div>
</div>
`;
